test/tests/compiler/11_long_integers/invalid_parse/empty_cast.plx
pub fn main(none) i32 {
    # A cast expression must include at least one type specifier
    return cast<>(0)
}
